--- a/src/Component/DeleteConfirmation/DeleteConfirmation.css
+++ b/src/Component/DeleteConfirmation/DeleteConfirmation.css
@@ -2,7 +2,7 @@
   position: fixed;
   height: 100%;
   width: 100%;
-  z-index: 1;
+  z-index: 20;
   margin-top: -6rem !important;
   margin-left: -17.5rem !important;
   display: flex;
