--- a/src/Pages/Sidebar/Sidebar.css
+++ b/src/Pages/Sidebar/Sidebar.css
@@ -3,7 +3,7 @@
   background-color: var(--secondary-color);
   border-right: 1px solid var(--primary-grey);
   width: 17.5rem;
-  z-index: 1;
+  z-index: 5;
   position: fixed;
   height: 100%;
   overflow-y: scroll;
