--- a/src/Pages/UserTab/UserTab.css
+++ b/src/Pages/UserTab/UserTab.css
@@ -3,6 +3,7 @@
   background-color: var(--secondary-color);
   border-bottom: 1px solid var(--primary-grey);
   position: fixed;
+  z-index: 4;
 }
 
 .profile {
